--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.14.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.2",
     "reactstrap": "^5.0.0-beta.3"
